@@ -1,8 +1,10 @@
 package org.openl.studio.projects.model.tables;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.Objects;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -35,7 +37,9 @@ public abstract class TableView {
     @Schema(description = "Name of the table")
     public final String name;
 
-    @Schema(description = "Custom properties associated with the table")
+    @Schema(
+            description = "Custom properties associated with the table. New tables write them to workbook rows "
+                    + "in request order")
     public final Map<String, Object> properties;
 
     @Parameter(description = "List of messages (errors, warnings, info) related to the table")
@@ -47,7 +51,13 @@ public abstract class TableView {
         this.tableType = builder.tableType;
         this.name = builder.name;
         this.kind = builder.kind;
-        this.properties = Optional.ofNullable(builder.properties).map(Map::copyOf).orElse(Map.of());
+        this.properties = builder.properties == null ? Map.of() : immutableProperties(builder.properties);
+    }
+
+    private static Map<String, Object> immutableProperties(Map<String, Object> properties) {
+        var copy = new LinkedHashMap<String, Object>(properties.size());
+        properties.forEach((name, value) -> copy.put(Objects.requireNonNull(name), Objects.requireNonNull(value)));
+        return Collections.unmodifiableMap(copy);
     }
 
     @JsonIgnore
